blue-green-with-virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-bg-virtualservice
spec:
  hosts:
    - my-bg-virtualservice
  http:
    - name: http
      route:
        - destination:
            host: my-bg-virtualservice-preview
          weight: 0
        - destination:
            host: my-bg-virtualservice-stable
          weight: 100
